--- a/Dev2AssessorApp/Src/SectionScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/SectionScreen.fx.yaml
@@ -27,12 +27,12 @@ SectionScreen As screen:
             Width: =Parent.Width
             ZIndex: =9
 
-            grpHeaderBS As group:
+            grpHeaderSS As group:
                 Height: =5
                 Width: =5
                 X: =40
                 Y: =40
-                ZIndex: =10
+                ZIndex: =8
 
                 lblAssessmentBS As label:
                     Align: =Align.Center
@@ -72,6 +72,23 @@ SectionScreen As screen:
                     Width: =ctnHeaderSS.Width/6
                     X: =imgUserHeaderBS.Width+imgUserHeaderBS.X
                     ZIndex: =5
+
+                imgLogoSS As image:
+                    DisplayMode: =DisplayMode.View
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =80
+                    Image: ='schindler-logo'
+                    PaddingBottom: =5
+                    PaddingLeft: =2
+                    PaddingRight: =1
+                    PaddingTop: =5
+                    Width: =ctnHeaderFS.Width/12
+                    ZIndex: =6
+
+                NetworkIconSS As Component2:
+                    X: =lblUsernameHeaderBS_2.Width+lblUsernameHeaderBS_2.X
+                    Y: =(ctnHeaderDS.Height-Self.Height)/2
+                    ZIndex: =7
 
         ctnSectionSS As groupContainer.verticalAutoLayoutContainer:
             Height: |-
